<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="main_title">Playlist maker</string>
    <string name="main_settings">Настройки</string>
    <string name="main_search">Поиск</string>
    <string name="main_mediateka">Медиатека</string>
    <string name="settings_darkTheme">Темная тема</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_userAgreement">Пользовательское соглашение</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="link_userAgreementButton">https://yandex.ru/legal/practicum_offer/</string>
    <string name="link_share_android_dev">https://practicum.yandex.ru/profile/android-developer/?from=catalog</string>
    <string name="support_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_message_topic">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email">nemislimus@yandex.ru</string>
    <string name="where_send_link">Укажите куда отправить ссылку:</string>
    <string name="no_apps_for_text_sending">На устройстве нет приложений для отправки текста!</string>
    <string name="no_apps_for_email">На устройстве нет почтового клиента!</string>
    <string name="no_browser_app">На устройстве нет браузера!</string>
    <string name="search_bar_empty">Строка поиска пуста</string>
    <string name="refresh">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="search_error_not_found">Ничего не нашлось</string>
    <string name="search_error_no_internet">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="back_to_search">Обратно к поиску</string>
    <string name="album_cover">Обложка альбома</string>
    <string name="track_duration">Длительность</string>
    <string name="track_album">Альбом</string>
    <string name="track_genre">Жанр</string>
    <string name="track_country">Страна</string>
    <string name="release_date">Год</string>
    <string name="create_new_playlist_button">Новый плейлист</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="back_from_playlist">Покинуть экран создания плейлиста</string>
    <string name="create_playlist_name_field_hint">Название*</string>
    <string name="create_playlist_discription_field_hint">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="add_track_to_playlist">Добавить в плейлист</string>
    <string name="track_1">трек</string>
    <string name="track_24">трека</string>
    <string name="track_other">треков</string>
    <string name="dialog_title">Завершить создание плейлиста?</string>
    <string name="dialog_neutral">Отмена</string>
    <string name="dialog_done">Завершить</string>
    <string name="dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="cover_base">savedCover_</string>
    <string name="track_add_to_playlist">Добавлено в плейлист </string>
    <string name="track_add_collision">Трек уже добавлен в плейлист </string>
    <string name="track_add_unreal">Невозможно добавить трек</string>
    <string name="playlist_pl">Плейлист</string>
    <string name="playlist_create">создан</string>
    <string name="back_to_playlists">Обратно к плейлистам</string>
    <string name="playlist_cover_description">Обложка плейлиста</string>
    <string name="playlist_share_button">Поделиться</string>
    <string name="playlist_menu_button">Меню плейлиста</string>
    <string name="playlist_share_menu_button">Поделиться</string>
    <string name="playlist_edit_menu_button">Редактировать информацию</string>
    <string name="playlist_delete_menu_button">Удалить плейлист</string>
    <string name="delete_track_dialog_message">Хотите удалить трек?</string>
    <string name="delete_track_dialog_title">Удалить трек</string>
    <string name="delete_dialog_done">ДА</string>
    <string name="delete_dialog_negative">НЕТ</string>
    <string name="delete_playlist_dialog_title">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист?</string>
    <string name="min">мин</string>
    <string name="playlist_empty">В плейлисте нет треков!</string>
    <string name="edit_playlist_title">Редактировать</string>
    <string name="edit_playlist_edit_button">Сохранить</string>
    <string name="playlist_edit">отредактирован</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="playlist_menu_image">обложка плейлиста во всплывающем меню</string>
</resources>