<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/player_bottom_sheet_background">

    <View
        android:id="@+id/header"
        android:layout_width="@dimen/classic_size_50dp"
        android:layout_height="@dimen/classic_size_4dp"
        android:background="@drawable/bottom_sheet_header"
        android:layout_marginTop="@dimen/classic_size_8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <include
        android:id="@+id/PlaylistCard"
        layout="@layout/bs_playlist_list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        android:layout_marginHorizontal="@dimen/classic_size_12dp"
        android:layout_marginTop="@dimen/classic_size_12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        />

    <Button
        android:id="@+id/btShare"
        android:layout_height="@dimen/classic_size_58dp"
        style="@style/SettingScreenButtonOrigin"
        android:text="@string/playlist_share_menu_button"
        android:layout_marginTop="@dimen/classic_size_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PlaylistCard"/>

    <Button
        android:id="@+id/btEditPlaylist"
        android:layout_height="@dimen/classic_size_58dp"
        style="@style/SettingScreenButtonOrigin"
        android:text="@string/playlist_edit_menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btShare"/>

    <Button
        android:id="@+id/btDeletePlaylist"
        android:layout_height="@dimen/classic_size_58dp"
        style="@style/SettingScreenButtonOrigin"
        android:text="@string/playlist_delete_menu_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btEditPlaylist"/>

</androidx.constraintlayout.widget.ConstraintLayout>