<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:background="?attr/colorSecondary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mediateka.fragments.NewPlaylistFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/classic_size_24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/classic_size_24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/classic_size_16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/classic_size_16dp"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbBackFromNewPlaylist"
        style="@style/Toolbar"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/Toolbar"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextColor="?attr/colorSecondaryVariant"
        android:contentDescription="@string/back_from_playlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/coverCard"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@id/leftBorder_24"
        app:layout_constraintEnd_toStartOf="@id/rightBorder_24"
        app:layout_constraintTop_toBottomOf="@id/tbBackFromNewPlaylist"
        android:layout_marginTop="@dimen/classic_size_26dp">

        <ImageView
            android:id="@+id/ivAddPlaylistPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/add_playlist_photo"
            android:contentDescription="@string/album_cover"
            android:scaleType="centerCrop"
            android:clickable="true" />

    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTag="title_field"
        android:id="@+id/tilPlaylistTitle"
        style="@style/PlaylistEditTextSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:hint="@string/create_playlist_name_field_hint"
        android:layout_marginTop="@dimen/classic_size_32dp"
        app:cursorColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/coverCard"
        app:layout_constraintStart_toEndOf="@id/leftBorder_16"
        app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
        app:layout_constraintBottom_toTopOf="@id/tilPlaylistDiscription">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/text_size_16sp"
            android:textAppearance="@style/CreatePlaylistFieldText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTag="description_field"
        android:id="@+id/tilPlaylistDiscription"
        style="@style/PlaylistEditTextSettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:hint="@string/create_playlist_discription_field_hint"
        android:layout_marginTop="@dimen/classic_size_16dp"
        app:cursorColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@id/tilPlaylistTitle"
        app:layout_constraintStart_toEndOf="@id/leftBorder_16"
        app:layout_constraintEnd_toStartOf="@id/rightBorder_16">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="@dimen/text_size_16sp"
            android:textAppearance="@style/CreatePlaylistFieldText" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/FieldsBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_tags="description_field"
        app:barrierDirection="bottom" />

    <Button
        app:layout_constraintTag="create_playlists_button"
        android:id="@+id/CreatePlaylistButton"
        android:background="@drawable/create_playlist_button_background"
        app:backgroundTint="@color/create_playlist_button_color"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:textAllCaps="false"
        android:text="@string/create_playlist"
        android:letterSpacing="0"
        android:visibility="visible"
        android:stateListAnimator="@null"
        android:elevation="0dp"
        android:clickable="true"
        android:enabled="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintVertical_bias="1"
        android:layout_marginTop="@dimen/classic_size_16dp"
        android:layout_marginBottom="@dimen/classic_size_32dp"
        app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
        app:layout_constraintStart_toEndOf="@id/leftBorder_16"
        app:layout_constraintTop_toBottomOf="@id/tilPlaylistDiscription"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>