<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context=".ui.player.activity.PlayerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/PlayerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSecondary">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbBackFromPlayerButton"
                style="@style/Toolbar"
                android:contentDescription="@string/back_to_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:titleTextColor="?attr/colorSecondaryVariant" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/classic_size_24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/classic_size_24dp" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftBorder_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/classic_size_16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightBorder_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/classic_size_16dp" />

            <ImageView
                android:id="@+id/ivAlbumCover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/classic_size_26dp"
                android:contentDescription="@string/album_cover"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_placeholder_track_image"
                app:layout_constrainedWidth="true"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_24"
                app:layout_constraintStart_toEndOf="@id/leftBorder_24"
                app:layout_constraintTop_toBottomOf="@id/tbBackFromPlayerButton" />

            <TextView
                android:id="@+id/tvTrackNamePlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_24dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="Yesterday (Remastered 2009)"
                android:textColor="?attr/colorSecondaryVariant"
                android:textFontWeight="400"
                android:textSize="@dimen/classic_text_size_22"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_24"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/leftBorder_24"
                app:layout_constraintTop_toBottomOf="@id/ivAlbumCover" />

            <TextView
                android:id="@+id/tvArtistNamePlayer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_12dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="The Beatles"
                android:textColor="?attr/colorSecondaryVariant"
                android:textFontWeight="400"
                android:textSize="@dimen/classic_text_size_14"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_24"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/leftBorder_24"
                app:layout_constraintTop_toBottomOf="@id/tvTrackNamePlayer" />

            <ImageView
                android:id="@+id/ivAddToPlaylistButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/add_to_playlist"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/ivPlayButton"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/ivPlayButton"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/leftBorder_24"
                app:layout_constraintTop_toTopOf="@id/ivPlayButton" />

            <ImageView
                android:id="@+id/ivPlayButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_30dp"
                android:alpha="0.3"
                android:src="@drawable/play_button"
                android:visibility="visible"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/ivAddToFavoritesButton"
                app:layout_constraintStart_toEndOf="@id/ivAddToPlaylistButton"
                app:layout_constraintTop_toBottomOf="@id/tvArtistNamePlayer" />

            <ImageView
                android:id="@+id/ivAddToFavoritesButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/add_to_favorite"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/ivPlayButton"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_24"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/ivPlayButton"
                app:layout_constraintTop_toTopOf="@id/ivPlayButton" />

            <TextView
                android:id="@+id/tvTrackTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_4dp"
                android:fontFamily="@font/ys_display_medium"
                android:text="0:30"
                android:textColor="?attr/colorSecondaryVariant"
                android:textFontWeight="500"
                android:textSize="@dimen/classic_text_size_14"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_24"
                app:layout_constraintStart_toEndOf="@id/leftBorder_24"
                app:layout_constraintTop_toBottomOf="@id/ivPlayButton" />

            <TextView
                android:id="@+id/tvTrackDuration"
                style="@style/TrackInfoField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_40dp"
                android:text="@string/track_duration"
                app:layout_constraintEnd_toStartOf="@id/tvTrackDurationValue"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/leftBorder_16"
                app:layout_constraintTop_toBottomOf="@id/tvTrackTimer" />

            <TextView
                android:id="@+id/tvTrackDurationValue"
                style="@style/TrackInfoField.TrackInfoFieldValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_40dp"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTrackDuration"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
                app:layout_constraintStart_toEndOf="@id/tvTrackDuration"
                tools:text="0:30" />

            <TextView
                android:id="@+id/tvTrackAlbum"
                style="@style/TrackInfoField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_16dp"
                android:text="@string/track_album"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toStartOf="@id/tvTrackAlbumValue"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/leftBorder_16"
                app:layout_constraintTop_toBottomOf="@id/tvTrackDuration" />

            <TextView
                android:id="@+id/tvTrackAlbumValue"
                style="@style/TrackInfoField.TrackInfoFieldValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTrackAlbum"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
                app:layout_constraintStart_toEndOf="@id/tvTrackAlbum"
                tools:text="Yesterday (Remastered 2009)" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/albumInfoGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:constraint_referenced_ids="tvTrackAlbum, tvTrackAlbumValue" />

            <TextView
                android:id="@+id/tvTrackReleaseDate"
                style="@style/TrackInfoField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_16dp"
                android:text="@string/release_date"
                app:layout_constraintEnd_toStartOf="@id/tvTrackReleaseDateValue"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/leftBorder_16"
                app:layout_constraintTop_toBottomOf="@id/tvTrackAlbum"
                app:layout_goneMarginTop="@dimen/classic_size_16dp" />

            <TextView
                android:id="@+id/tvTrackReleaseDateValue"
                style="@style/TrackInfoField.TrackInfoFieldValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTrackReleaseDate"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
                app:layout_constraintStart_toEndOf="@id/tvTrackReleaseDate"
                tools:text="1965" />

            <TextView
                android:id="@+id/tvTrackGenre"
                style="@style/TrackInfoField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_16dp"
                android:text="@string/track_genre"
                app:layout_constraintEnd_toStartOf="@id/tvTrackGenreValue"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/leftBorder_16"
                app:layout_constraintTop_toBottomOf="@id/tvTrackReleaseDate" />

            <TextView
                android:id="@+id/tvTrackGenreValue"
                style="@style/TrackInfoField.TrackInfoFieldValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTrackGenre"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
                app:layout_constraintStart_toEndOf="@id/tvTrackGenre"
                tools:text="Rock" />

            <TextView
                android:id="@+id/tvTrackCountry"
                style="@style/TrackInfoField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/classic_size_16dp"
                android:layout_marginBottom="@dimen/classic_size_24dp"
                android:text="@string/track_country"
                app:layout_constraintBottom_toTopOf="@id/deep"
                app:layout_constraintEnd_toStartOf="@id/tvTrackCountryValue"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/leftBorder_16"
                app:layout_constraintTop_toBottomOf="@id/tvTrackGenre" />

            <TextView
                android:id="@+id/tvTrackCountryValue"
                style="@style/TrackInfoField.TrackInfoFieldValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBaseline_toBaselineOf="@id/tvTrackCountry"
                app:layout_constraintEnd_toStartOf="@id/rightBorder_16"
                app:layout_constraintStart_toEndOf="@id/tvTrackCountry"
                tools:text="Великобритания" />

            <View
                android:id="@+id/deep"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:visibility="gone" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/PlayerFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone"/>

    <include
        android:id="@+id/BottomSheetLayout"
        layout="@layout/player_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:visibility="visible"
        app:behavior_draggable="true"
        app:behavior_hideable="true"
        app:behavior_peekHeight="500dp"
        app:behavior_skipCollapsed="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>


